REFACTO - simplify components uses

--- a/src/utils/constants/i18n/french.json
+++ b/src/utils/constants/i18n/french.json
@@ -1,6 +1,7 @@
 {
   "ACCOUNT_EXISTING": "J'ai dêjà un compte",
   "ACCOUNT_NO_EXISTING": "Je n'ai pas encore de compte",
+  "ALL_STYLES_AVAILABLES_HERE": "Tous les visuels des composants de l'App sont visibles ici (click) !",
   "AND": "et",
   "AND_OR": "et/ou",
   "AUTH": "Authentification",
